# durandice

./: .gitignore  Cargo.toml  Cargo.toml~  README.md  database.db
src/: #parser.lalrpop#  .#main.rs  .#parser.lalrpop  commands.rs  commands.rs~  lib.rs  lib.rs~  main.rs  parser.lalrpop  parser.lalrpop~
