[package]
name = "dice-bot"
version = "0.1.0"
authors = ["technolapin <clement.chomicki@protonmail.com>"]
edition = "2018"


[build-dependencies]
lalrpop = "0.17.2"


[dependencies]
lalrpop-util = "0.18.1"
regex = "1"
serenity = "0.8.6"
rand = {version = "0.9.1", feature = ["thread_rng"]}
rlisp = {path = "rlisp"}
tokio="*"
rusqlite="0.37.0"
pkg-config="*"
serde="*"
serde_json="*"
chrono="*"